# test_task_auth_demo

./: .gitignore  LICENSE  README.md  alembic.ini  config.toml  docker-compose.yaml  docker_alembic.ini  docker_config.toml  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 470730bd2e92_initial_tables_setup.py  76dda91c7bd4_add_more_relations_for_roles_and_.py
src/demo_api/: __main__.py  fake_data_setup.py
src/demo_api/api/: security_definition.py  server.py
src/demo_api/api/endpoints/: __init__.py  business_resources.py  roles_resources.py  user_resources.py
src/demo_api/api/exceptions/: __init__.py  bad_token_payload.py  unauthorized_resource_access.py
src/demo_api/api/services/: authentication_service.py
src/demo_api/dto/: __init__.py  create_role_request.py  hashing_settings.py  password_update.py  registration_form.py  resource.py  resource_details.py  resource_permissions_details.py  resource_permissions_update.py  role.py  session_data.py  session_termination_confirmed.py  user.py  user_authentication.py  user_detailed.py  user_permissions.py  user_registration.py  user_update.py
src/demo_api/storage/exceptions/: __init__.py  integirty_error.py
src/demo_api/use_cases/: __init__.py  resource_use_case.py  roles_use_case.py  user_use_cases.py
src/demo_api/utils/: config_schema.py  providers.py
tests/: test_config.toml
tests/test_storage/: fixtures.py  test_database_initialization.py  test_resources.py  test_roles_repo_sqla.py  test_users_repo_sqla.py  test_users_usecase_sqla.py
(+26 files in other folders)
